--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,32 +14,39 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/message" />
 
     <EditText
         android:id="@+id/topic"
         app:layout_constraintTop_toTopOf="parent"
+        android:hint="Exchange Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
     <Button
-        android:id="@+id/sendBt"
-        app:layout_constraintTop_toBottomOf="@id/topic"
-        android:text="send"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <Button
         android:id="@+id/resBt"
-        app:layout_constraintTop_toBottomOf="@id/sendBt"
-        android:text="re Bind"
+        app:layout_constraintTop_toBottomOf="@id/topic"
+        android:text="Bind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <EditText
         app:layout_constraintTop_toBottomOf="@id/resBt"
         android:id="@+id/message"
+        android:hint="Message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         />
+
+    <Button
+        android:id="@+id/sendBt"
+        app:layout_constraintTop_toBottomOf="@id/message"
+        android:text="send"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
