--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sendBt"
+        app:layout_constraintTop_toBottomOf="@id/allAck"
         android:layout_height="0dp">
         <TextView
             android:id="@+id/res"
@@ -59,6 +59,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/allAck"
+        app:layout_constraintTop_toBottomOf="@id/sendBt"
+        android:text="Ack all message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 
